Se actualiza calculo de niveles en piramide de maslow general